// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartTableGrid renders with count 1`] = `
<div
  className="ax-chart-table__grid-container"
>
  <div
    className="ax-chart-table__grid"
    style={
      Object {
        "left": undefined,
      }
    }
  >
    <div
      className="ax-chart-table__grid-lines"
    >
      <svg
        className="ax-chart-table__grid-lines-svg"
      >
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="0%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="25%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="50%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="75%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="100%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`ChartTableGrid renders with defaultProps 1`] = `
<div
  className="ax-chart-table__grid-container"
>
  <div
    className="ax-chart-table__grid"
    style={
      Object {
        "left": undefined,
      }
    }
  >
    <div
      className="ax-chart-table__grid-lines"
    >
      <svg
        className="ax-chart-table__grid-lines-svg"
      >
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="0%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="10%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="20%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="30%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="40%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="50%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="60%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="70%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="80%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="90%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
        <svg
          className="ax-chart-table__grid-line-svg"
          preserveAspectRatio="none"
          viewBox="0 0 1 1"
          width="1"
          x="100%"
        >
          <path
            className="ax-chart-table__grid-line"
            d="M 0 0 V 1"
            shapeRendering="crispEdges"
            strokeDasharray="1, 1"
            strokeWidth="1"
          />
        </svg>
      </svg>
    </div>
  </div>
</div>
`;
